2007-06-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* updates to panels and dialogs, robust UI designs using NetBeans.
	* The node of an inserted module reference gets immediately
	selected.
	
2007-06-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* parser: ESProducers being parsed (as Modules with type
	'ESProducer')
	* add directory 'ext' and add the jars for the JDBC drivers to
	it. Also add a jar for org.jdesktop.layout.* support, which allows
	for GUIs to be designed with the Netbeans GUI Editor
	* adjust startGUI script to rely on the jars in ext/
	* bug fix: correctly change values of nested PSet in the instance
	panel
	* bug fix: VPSet.setValue() needed one.
	* set currentObject to null if the treetable fires a
	treeStructureChanged event -> avoid Add Path / Add Sequence to
	skip the entering of a valid name
	
2007-06-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* add functionality to *export* configurations to other DBs (Menu
	Database -> Export Configuration)
	* add functionality to *migrate* a configuration to another
	release (Menu Configurations -> Migrate)
	* optimize db storage: reassociate unchanged modules
	* fix bugs reported by Marco: insert another reference to an
	already referenced module instance; correct storage of VInputTag
	and VEventID datatypes; parameter value changes not reflected in
	the tree view in some cases; a tracked PSet can be empty (?!).
	* change DB schema to allow for an additional integer to be stored
	with each (path / sequence / module) *reference*, which indicates
	the operator to that reference ('&',',','!','-'). To be reflected
	in the datamodel.

2007-06-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* pick up parser fix regarding parameters retrieved via
	BranchDescription 
	* pick up converter changes: *V1.java files removed, ascii